--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gerador de Senhas</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-    
+
+    <div class="pw-container">
+
+        <div class="pw-header">
+            <div class="pw">
+                <span id="pw">123456789</span>
+                <button id="copy">Copiar</button>
+            </div>
+        </div>
+
+        <div class="pw-body">
+            <div class="form-control">
+                <label for="len">Password Length</label>
+                <input type="number" id="len" value="15" min="2" max="30">
+            </div>
+
+            <div class="form-control">
+                <label for="upper">Uppercase</label>
+                <input type="checkbox" id="upper">
+            </div>
+
+            <div class="form-control">
+                <label for="lower">Lowercase</label>
+                <input type="checkbox" id="lower">
+            </div>
+
+            <div class="form-control">
+                <label for="number">Number</label>
+                <input type="checkbox" id="number">
+            </div>
+
+            <div class="form-control">
+                <label for="symbol">Symbol</label>
+                <input type="checkbox" id="symbol">
+            </div>
+
+            <button class="generate" id="generate">Gerar Senha</button>
+
+        </div>
+
+    </div>
+
+
+
 </body>
+
 </html>
